# audio

./: .gitignore  catalog.yaml  pyproject.toml
src/core/: downloader.py  processor.py
src/tui/: app.py
tests/: test_processor.py
