[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
    "huggingface_hub>=0.19.0",
    "pyyaml>=6.0",
    "soundfile",
    "librosa",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "pytest-cov",      # For checking test coverage
    "ruff",            # Lightning-fast linter and formatter
    "mypy",             # Static type checker
]



# --- Tool Configurations ---

[tool.pytest.ini_options]
testpaths = ["tests"]
# Automatically run coverage report when you type `pytest`
addopts = "--cov=src --cov-report=term-missing"


[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true